--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
 
 </div>
 <div class="forseaerchindisplay">
+        <i class="fa-solid fa-x fabx" onclick="closefindassdpla()"></i>
+
 
 </div>
 
